[gd_scene load_steps=37 format=2]

[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/mapPack_tilesheet.png" type="Texture" id=1]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Scripts/Stage_Vorlage.gd" type="Script" id=2]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_vorlage1.png" type="Texture" id=3]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Prof_Sprites/template_background.png" type="Texture" id=4]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/temp_chat_mod.png" type="Texture" id=5]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Fonts/button_theme.tres" type="Theme" id=6]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_document.png" type="Texture" id=7]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_document_solved.png" type="Texture" id=8]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_muted1.png" type="Texture" id=9]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_muted2.png" type="Texture" id=10]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Scenes/chat_buttongroup.tres" type="ButtonGroup" id=11]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_muted3.png" type="Texture" id=12]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Fonts/anzeigenFont.tres" type="DynamicFont" id=13]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_muted_answer.png" type="Texture" id=14]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/black_screen.png" type="Texture" id=15]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_idle2.png" type="Texture" id=16]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_idle3.png" type="Texture" id=17]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_idle1.png" type="Texture" id=18]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_black_screen_answer.png" type="Texture" id=19]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/bla_speechbubble.png" type="Texture" id=20]
[ext_resource path="res://games/OnlineSeminarMiniGame_mod_01/Assets/Images/Speechbubbles/speechbubble_prof_loud_chaos_answer.png" type="Texture" id=21]

[sub_resource type="TileSet" id=1]
0/name = "mapPack_tilesheet.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 64, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "mapPack_tilesheet.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 384, 64, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "mapPack_tilesheet.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 704, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "mapPack_tilesheet.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 320, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "mapPack_tilesheet.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 384, 320, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "mapPack_tilesheet.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 704, 320, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Speechbubble:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Speechbubble:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 430, 160 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "document_load"
tracks/0/type = "value"
tracks/0/path = NodePath("Speechbubble:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Speechbubble:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 430, 220 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "document_solved"
tracks/0/type = "value"
tracks/0/path = NodePath("Speechbubble:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Speechbubble:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 440, 400 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 7.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Speechbubble:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Speechbubble:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 470, 160 ), Vector2( 430, 220 ), Vector2( 440, 400 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "muted_speech"
length = 9.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Speechbubble:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Speechbubble:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 425, 160 ), Vector2( 415, 260 ), Vector2( 400, 410 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "solved_black_screen"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Speechbubble:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 19 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Speechbubble:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 430, 220 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "solved_loud_chaos"
tracks/0/type = "value"
tracks/0/path = NodePath("Speechbubble:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 21 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "solved_speech_muted"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Speechbubble:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Dozent:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_1:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_2:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_2:normal_map")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 310, 180 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 400, 330 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_3:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 20 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_3:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 700, 340 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Interference_speechbubbles/Interference_speechubble_4:texture")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 20 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../Interference_speechbubbles/Interference_speechubble_4:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 620, 270 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("../Zoom_Background:texture")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 15 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../ChatArea:texture")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "black_screen"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Zoom_Background:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "loud_chaos"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), null ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 310, 180 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 400, 330 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_3:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), null ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Interference_speechbubbles/Interference_speechbubble_3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 700, 340 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Interference_speechbubbles/Interference_speechubble_4:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 20 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Interference_speechbubbles/Interference_speechubble_4:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 3.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 620, 270 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "none"
tracks/0/type = "value"
tracks/0/path = NodePath("../Zoom_Background:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "wrong_data"
tracks/0/type = "value"
tracks/0/path = NodePath("../ChatArea:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Theme" id=6]
Label/fonts/font = ExtResource( 13 )

[node name="Stage_Vorlage" type="Node"]
script = ExtResource( 2 )
chat_selction_group = ExtResource( 11 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 2, 0, -65516, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 65556, 2, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 196628, 2, 0, 327679, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 262164, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 458751, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 393236, 2, 0, 524287, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 458772, 2, 0, 589823, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 2, 0, 524308, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 589844, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 720916, 2, 0 )

[node name="Zoom_Background" type="Sprite" parent="."]
position = Vector2( 520, 275 )
texture = ExtResource( 15 )

[node name="Dozent" type="Sprite" parent="."]
position = Vector2( 720, 273 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )

[node name="ChatArea" type="Sprite" parent="."]
position = Vector2( 1150.5, 275 )
scale = Vector2( 1.23494, 1 )
texture = ExtResource( 5 )

[node name="Speechbubble" type="Sprite" parent="."]
position = Vector2( 430, 160 )
texture = ExtResource( 3 )

[node name="Interference_speechbubbles" type="Node2D" parent="."]
visible = false

[node name="Interference_speechbubble_1" type="Sprite" parent="Interference_speechbubbles"]
position = Vector2( 310, 180 )
scale = Vector2( 1.35023, 1.62105 )
texture = ExtResource( 20 )

[node name="Interference_speechbubble_2" type="Sprite" parent="Interference_speechbubbles"]
position = Vector2( 400, 330 )
scale = Vector2( 1.41935, 1.50526 )
texture = ExtResource( 20 )

[node name="Interference_speechbubble_3" type="Sprite" parent="Interference_speechbubbles"]
position = Vector2( 700, 340 )
scale = Vector2( 1.50691, 1.95789 )
texture = ExtResource( 20 )

[node name="Interference_speechubble_4" type="Sprite" parent="Interference_speechbubbles"]
position = Vector2( 620, 270 )
scale = Vector2( 1.75346, 1.92368 )
texture = ExtResource( 20 )

[node name="Animation" type="Node2D" parent="."]

[node name="Animate_dozent_speechbubble" type="AnimationPlayer" parent="Animation"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/document_load = SubResource( 17 )
anims/document_solved = SubResource( 18 )
anims/idle = SubResource( 11 )
anims/muted_speech = SubResource( 5 )
anims/solved_black_screen = SubResource( 12 )
anims/solved_loud_chaos = SubResource( 15 )
anims/solved_speech_muted = SubResource( 8 )

[node name="Animate_interference_speechbubble" type="AnimationPlayer" parent="Animation"]
anims/RESET = SubResource( 9 )
anims/black_screen = SubResource( 10 )
anims/loud_chaos = SubResource( 13 )
anims/none = SubResource( 14 )
anims/wrong_data = SubResource( 16 )

[node name="Button" type="Node2D" parent="."]

[node name="Button_1" type="Button" parent="Button"]
margin_left = 20.0
margin_top = 550.0
margin_right = 520.0
margin_bottom = 625.0
theme = ExtResource( 6 )
toggle_mode = true
group = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/Button_1"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
text = "label_1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button_2" type="Button" parent="Button"]
margin_left = 522.0
margin_top = 550.0
margin_right = 1022.0
margin_bottom = 625.0
theme = ExtResource( 6 )
toggle_mode = true
group = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/Button_2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
text = "label_2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button_3" type="Button" parent="Button"]
margin_left = 20.0
margin_top = 627.0
margin_right = 520.0
margin_bottom = 702.0
theme = ExtResource( 6 )
toggle_mode = true
group = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/Button_3"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
text = "label_3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button_4" type="Button" parent="Button"]
margin_left = 522.0
margin_top = 627.0
margin_right = 1022.0
margin_bottom = 702.0
theme = ExtResource( 6 )
toggle_mode = true
group = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/Button_4"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
text = "label_4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Send_Button" type="Button" parent="Button"]
margin_left = 1050.0
margin_top = 550.0
margin_right = 1250.0
margin_bottom = 625.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/Send_Button"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
text = "Send"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Next_Button" type="Button" parent="Button"]
margin_left = 1050.0
margin_top = 627.0
margin_right = 1250.0
margin_bottom = 702.0
theme = ExtResource( 6 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button/Next_Button"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Button/Send_Button" to="." method="_on_Send_Button_pressed"]
[connection signal="pressed" from="Button/Next_Button" to="." method="_on_Next_Button_pressed"]
